# SFMLoopShooter

./: .gitignore  CMakeLists.txt  README.md  a.txt
assets/: tile.txt
include/: CMakeLists.txt
include/Entity/: Configuration.hpp  Entity.hpp  PickableEntities.hpp  Player.cpp  Player.hpp  Projectile.hpp  StaticEntities.hpp
include/Event/: Action.cpp  Action.hpp  ActionMap.hpp  ActionMap.tpl  ActionTarget.hpp  ActionTarget.tpl  EventRecorder.hpp
include/GUI/: Button.cpp  Button.hpp  Configuration.hpp  Text.hpp  TextBox.cpp  TextBox.hpp  Widget.hpp
include/GameLogic/: Configuration.hpp  DataReceiver.cpp  GameClient.hpp  GameHost.hpp  GameLogic.hpp  NetworkHandler.hpp  NetworkInterface.hpp
include/Resources/: ResourceHolder.cpp  ResourceHolder.hpp  ResourceManager.hpp  ResourceManager.tpl  configuration.hpp
include/Views/: Configuration.hpp  SplashScreen.hpp  TileContainerView.cpp  TileContainerView.hpp  TileMapView.cpp  TileMapView.hpp
src/: CMakeLists.txt  main.cpp
